[gd_scene load_steps=10 format=3 uid="uid://bw2t12l1pn8ai"]

[ext_resource type="Script" path="res://SCENES/UI/map_room.gd" id="1_xygkr"]
[ext_resource type="Texture2D" uid="uid://ts2xrqby2mpu" path="res://ART/UI/coinIcon.png" id="2_m68pu"]
[ext_resource type="AudioStream" uid="uid://c78cldixfclcm" path="res://AUDIO/SOUND EFFECTS/button_sound/GenericButton6.wav" id="2_nv6l2"]
[ext_resource type="AudioStream" uid="uid://c3qu2f8qksrc6" path="res://AUDIO/SOUND EFFECTS/button_sound/GenericNotification11.wav" id="3_tc8iu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p61y7"]

[sub_resource type="Animation" id="Animation_5t8yj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Line2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_nxjbr"]
resource_name = "highlight"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-1.51572, -1.7411),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.15, 1.15)]
}

[sub_resource type="Animation" id="Animation_61g4c"]
resource_name = "select"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Line2D:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_map_room_selected"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c1kac"]
_data = {
"RESET": SubResource("Animation_5t8yj"),
"highlight": SubResource("Animation_nxjbr"),
"select": SubResource("Animation_61g4c")
}

[node name="MapRoom" type="Area2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_xygkr")
hover_audio = ExtResource("2_nv6l2")
press_audio = ExtResource("3_tc8iu")

[node name="Visuals" type="Node2D" parent="."]

[node name="Line2D" type="Line2D" parent="Visuals"]
modulate = Color(1, 1, 1, 0)
points = PackedVector2Array(0, 10, -8, 4, -4, -8, 8, -4, 8, 6)
closed = true
width = 1.0
default_color = Color(0.385493, 0.385492, 0.385492, 1)

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_m68pu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_p61y7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c1kac")
}

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
